reservations completed for candidates and interviewer

--- a/frontend/src/locales/ar.json
+++ b/frontend/src/locales/ar.json
@@ -426,6 +426,10 @@
         "note": "ملاحظة",
         "rejectionReason": "سبب الرفض",
         "rejectionReasonPrompt": "يرجى تقديم سبب للرفض:",
+        "rejectReservation": "رفض الحجز",
+        "rejectingFor": "رفض الحجز لـ",
+        "rejectionReasonPlaceholder": "يرجى تقديم سبب لرفض هذا الحجز...",
+        "rejectionReasonHelp": "سيتم عرض هذا السبب للمرشح",
         "accept": "قبول",
         "reject": "رفض",
         "bookingSuccess": "تم إرسال طلب الحجز بنجاح! في انتظار تأكيد المحاور.",
