--- a/frontend/src/locales/en.json
+++ b/frontend/src/locales/en.json
@@ -421,6 +421,10 @@
         "note": "Note",
         "rejectionReason": "Rejection Reason",
         "rejectionReasonPrompt": "Please provide a reason for rejection:",
+        "rejectReservation": "Reject Reservation",
+        "rejectingFor": "Rejecting reservation for",
+        "rejectionReasonPlaceholder": "Please provide a reason for rejecting this reservation...",
+        "rejectionReasonHelp": "This reason will be shown to the candidate",
         "accept": "Accept",
         "reject": "Reject",
         "bookingSuccess": "Booking request sent successfully! Waiting for interviewer confirmation.",
