--- a/frontend/src/locales/en.json
+++ b/frontend/src/locales/en.json
@@ -451,6 +451,10 @@
         "noSlotsDescription": "Please check back later or select a different day",
         "bookSlot": "Book This Slot",
         "bookNow": "Book Now",
+        "colorLegend": "Slot Status Colors",
+        "availableSlot": "Available - You can book",
+        "pendingSlot": "Pending - Not accepted yet",
+        "bookedSlot": "Booked - Already reserved",
         "slotSelected": "Slot is selected",
         "alreadyBooked": "Already Booked",
         "pendingMessage": "This slot has pending reservations",
