update users dashboard for admin

--- a/frontend/src/locales/ar.json
+++ b/frontend/src/locales/ar.json
@@ -364,11 +364,15 @@
         "deleteUserConfirm": "هل أنت متأكد من حذف {{name}}؟ لا يمكن التراجع عن هذا الإجراء.",
         "editUser": "تعديل المستخدم",
         "updateUserSuccess": "تم تحديث المستخدم بنجاح",
+        "cv": "السيرة الذاتية",
+        "viewCV": "عرض السيرة الذاتية",
         "activate": "تفعيل",
         "deactivate": "إلغاء التفعيل",
         "activateUserSuccess": "تم تفعيل المستخدم بنجاح",
         "deactivateUserSuccess": "تم إلغاء تفعيل المستخدم بنجاح",
         "approved": "موافق عليه",
+        "pendingApproval": "في انتظار الموافقة",
+        "allApprovalStatuses": "جميع حالات الموافقة",
         "interviews": "المقابلات",
         "searchUsers": "البحث بالاسم أو البريد الإلكتروني...",
         "allRoles": "جميع الأدوار",
