--- a/frontend/src/locales/en.json
+++ b/frontend/src/locales/en.json
@@ -359,11 +359,15 @@
         "deleteUserConfirm": "Are you sure you want to delete {{name}}? This action cannot be undone.",
         "editUser": "Edit User",
         "updateUserSuccess": "User updated successfully",
+        "cv": "CV",
+        "viewCV": "View CV",
         "activate": "Activate",
         "deactivate": "Deactivate",
         "activateUserSuccess": "User activated successfully",
         "deactivateUserSuccess": "User deactivated successfully",
         "approved": "Approved",
+        "pendingApproval": "Pending Approval",
+        "allApprovalStatuses": "All Approval Statuses",
         "interviews": "Interviews",
         "searchUsers": "Search by name or email...",
         "allRoles": "All Roles",
