video call implmentation and evaluation

--- a/frontend/src/locales/ar.json
+++ b/frontend/src/locales/ar.json
@@ -244,7 +244,8 @@
         "years": "سنة",
         "active": "نشط",
         "inactive": "غير نشط",
-        "past": "سابق"
+        "past": "سابق",
+        "retry": "إعادة المحاولة"
     },
     "status": {
         "pending": "في الانتظار",
@@ -496,5 +497,88 @@
         "bookingSuccess": "تم إرسال طلب الحجز بنجاح! في انتظار تأكيد المحاور.",
         "acceptSuccess": "تم قبول الحجز بنجاح!",
         "rejectSuccess": "تم رفض الحجز بنجاح."
+    },
+    "sessions": {
+        "interviewSession": "جلسة المقابلة",
+        "startInterview": "بدء المقابلة",
+        "joinCall": "انضم للمكالمة",
+        "createChannel": "إنشاء قناة",
+        "waitingToStart": "في انتظار بدء المقابلة",
+        "loadingToken": "جاري تحميل مكالمة الفيديو...",
+        "joinToStart": "انقر على 'انضم للمكالمة' لبدء المقابلة",
+        "interviewerWillStart": "سيبدأ المحاور الجلسة عندما يكون جاهزاً",
+        "preparingCall": "جاري تحضير مكالمة الفيديو...",
+        "readyToJoin": "مكالمة الفيديو جاهزة",
+        "tokenError": "تعذر تحميل مكالمة الفيديو. يرجى تحديث الصفحة.",
+        "roomError": "فشل في إنشاء القناة",
+        "sessionStarted": "تم بدء الجلسة!",
+        "startError": "فشل في بدء الجلسة",
+        "joinError": "القناة غير جاهزة. يرجى الانتظار...",
+        "completeSession": "هل تريد إكمال هذه الجلسة؟",
+        "sessionCompleted": "تم إكمال الجلسة!",
+        "completeError": "فشل في إكمال الجلسة",
+        "evaluationSubmitted": "تم إرسال التقييم بنجاح!",
+        "notFound": "الجلسة غير موجودة",
+        "scheduled": "مجدولة",
+        "inProgress": "قيد التنفيذ",
+        "completed": "مكتملة",
+        "cancelled": "ملغاة",
+        "noSessions": "لا توجد جلسات",
+        "noSessionsDescription": "ستظهر جلسات المقابلات الخاصة بك هنا",
+        "joinSession": "انضم للجلسة",
+        "viewSession": "عرض الجلسة",
+        "liveEvaluation": "تقييم مباشر",
+        "evaluationSaved": "تم حفظ التقييم!",
+        "evaluationError": "فشل في حفظ التقييم",
+        "evaluationUpdated": "تم تحديث التقييم!",
+        "addComment": "أضف تعليقاً...",
+        "generalNotes": "ملاحظات عامة",
+        "notesPlaceholder": "ملاحظات إضافية...",
+        "saveDraft": "حفظ مسودة",
+        "submitEvaluation": "إرسال",
+        "interviewQuestions": "أسئلة المقابلة",
+        "questionMarked": "تم تمييز السؤال كمسؤول عنه",
+        "customQuestionAdded": "تمت إضافة سؤال مخصص (الميزة قادمة قريباً)",
+        "allCategories": "الكل",
+        "technical": "تقني",
+        "behavioral": "سلوكي",
+        "problemSolving": "حل المشكلات",
+        "systemDesign": "تصميم النظام",
+        "noQuestions": "لا توجد أسئلة متاحة",
+        "asked": "تم السؤال",
+        "addCustomQuestion": "إضافة سؤال مخصص",
+        "questionPlaceholder": "أدخل سؤالك..."
+    },
+    "session": {
+        "loadingCall": "جاري تحميل مكالمة الفيديو...",
+        "failedToJoin": "فشل في الانضمام للمكالمة",
+        "you": "أنت",
+        "waitingForParticipant": "في انتظار المشارك...",
+        "mute": "كتم الصوت",
+        "unmute": "إلغاء كتم الصوت",
+        "turnOnVideo": "تشغيل الفيديو",
+        "turnOffVideo": "إيقاف الفيديو",
+        "shareScreen": "مشاركة الشاشة",
+        "stopSharing": "إيقاف المشاركة",
+        "leaveCall": "مغادرة المكالمة",
+        "autoplayFailed": "يرجى النقر في أي مكان لتمكين تشغيل الصوت/الفيديو",
+        "audioPlayError": "فشل في تشغيل الصوت. يرجى النقر لتمكينه.",
+        "videoPlayError": "فشل في تشغيل الفيديو. يرجى التحقق من الصلاحيات.",
+        "permissionDenied": "تم رفض إذن الكاميرا/الميكروفون. يرجى السماح بالوصول وتحديث الصفحة.",
+        "deviceNotFound": "لم يتم العثور على الكاميرا/الميكروفون. يرجى التحقق من أجهزتك.",
+        "trackError": "فشل في الوصول إلى أجهزة الوسائط: {{error}}",
+        "initError": "فشل في تهيئة مكالمة الفيديو",
+        "muteError": "فشل في تبديل الميكروفون",
+        "videoToggleError": "فشل في تبديل الكاميرا",
+        "screenShareDenied": "تم رفض إذن مشاركة الشاشة",
+        "screenShareError": "فشل في تبديل مشاركة الشاشة",
+        "uidError": "تنسيق معرف المستخدم غير صحيح",
+        "tokenIncomplete": "بيانات الرمز المميز غير مكتملة. يرجى المحاولة مرة أخرى."
+    },
+    "evaluations": {
+        "communication": "التواصل",
+        "technical": "المهارات التقنية",
+        "problemSolving": "حل المشكلات",
+        "confidence": "الثقة"
     }
 }
