--- a/frontend/src/locales/en.json
+++ b/frontend/src/locales/en.json
@@ -239,7 +239,8 @@
         "years": "years",
         "active": "Active",
         "inactive": "Inactive",
-        "past": "Past"
+        "past": "Past",
+        "retry": "Retry"
     },
     "status": {
         "pending": "Pending",
@@ -491,5 +492,88 @@
         "bookingSuccess": "Booking request sent successfully! Waiting for interviewer confirmation.",
         "acceptSuccess": "Reservation accepted successfully!",
         "rejectSuccess": "Reservation rejected successfully."
+    },
+    "sessions": {
+        "interviewSession": "Interview Session",
+        "startInterview": "Start Interview",
+        "joinCall": "Join Call",
+        "createChannel": "Create Channel",
+        "waitingToStart": "Waiting for interview to start",
+        "loadingToken": "Loading video call...",
+        "joinToStart": "Click 'Join Call' to start the interview",
+        "interviewerWillStart": "The interviewer will start the session when ready",
+        "preparingCall": "Preparing video call...",
+        "readyToJoin": "The video call is ready",
+        "tokenError": "Unable to load video call. Please refresh the page.",
+        "roomError": "Failed to create channel",
+        "sessionStarted": "Session started!",
+        "startError": "Failed to start session",
+        "joinError": "Channel not ready. Please wait...",
+        "completeSession": "Do you want to complete this session?",
+        "sessionCompleted": "Session completed!",
+        "completeError": "Failed to complete session",
+        "evaluationSubmitted": "Evaluation submitted successfully!",
+        "notFound": "Session not found",
+        "scheduled": "Scheduled",
+        "inProgress": "In Progress",
+        "completed": "Completed",
+        "cancelled": "Cancelled",
+        "noSessions": "No sessions found",
+        "noSessionsDescription": "Your interview sessions will appear here",
+        "joinSession": "Join Session",
+        "viewSession": "View Session",
+        "liveEvaluation": "Live Evaluation",
+        "evaluationSaved": "Evaluation saved!",
+        "evaluationError": "Failed to save evaluation",
+        "evaluationUpdated": "Evaluation updated!",
+        "addComment": "Add comment...",
+        "generalNotes": "General Notes",
+        "notesPlaceholder": "Additional notes...",
+        "saveDraft": "Save Draft",
+        "submitEvaluation": "Submit",
+        "interviewQuestions": "Interview Questions",
+        "questionMarked": "Question marked as asked",
+        "customQuestionAdded": "Custom question added (feature coming soon)",
+        "allCategories": "All",
+        "technical": "Technical",
+        "behavioral": "Behavioral",
+        "problemSolving": "Problem Solving",
+        "systemDesign": "System Design",
+        "noQuestions": "No questions available",
+        "asked": "Asked",
+        "addCustomQuestion": "Add Custom Question",
+        "questionPlaceholder": "Enter your question..."
+    },
+    "session": {
+        "loadingCall": "Loading video call...",
+        "failedToJoin": "Failed to join call",
+        "you": "You",
+        "waitingForParticipant": "Waiting for participant...",
+        "mute": "Mute",
+        "unmute": "Unmute",
+        "turnOnVideo": "Turn on video",
+        "turnOffVideo": "Turn off video",
+        "shareScreen": "Share screen",
+        "stopSharing": "Stop sharing",
+        "leaveCall": "Leave call",
+        "autoplayFailed": "Please click anywhere to enable audio/video playback",
+        "audioPlayError": "Failed to play audio. Please click to enable.",
+        "videoPlayError": "Failed to play video. Please check permissions.",
+        "permissionDenied": "Camera/microphone permission denied. Please allow access and refresh.",
+        "deviceNotFound": "Camera/microphone not found. Please check your devices.",
+        "trackError": "Failed to access media devices: {{error}}",
+        "initError": "Failed to initialize video call",
+        "muteError": "Failed to toggle microphone",
+        "videoToggleError": "Failed to toggle camera",
+        "screenShareDenied": "Screen sharing permission denied",
+        "screenShareError": "Failed to toggle screen sharing",
+        "uidError": "Invalid user ID format",
+        "tokenIncomplete": "Token data is incomplete. Please try again."
+    },
+    "evaluations": {
+        "communication": "Communication",
+        "technical": "Technical Skills",
+        "problemSolving": "Problem Solving",
+        "confidence": "Confidence"
     }
 }
