making dialog instead of alert and confirm

--- a/frontend/src/locales/ar.json
+++ b/frontend/src/locales/ar.json
@@ -515,6 +515,8 @@
         "startError": "فشل في بدء الجلسة",
         "joinError": "القناة غير جاهزة. يرجى الانتظار...",
         "completeSession": "هل تريد إكمال هذه الجلسة؟",
+        "completeSessionTitle": "إكمال الجلسة",
+        "complete": "إكمال",
         "sessionCompleted": "تم إكمال الجلسة!",
         "completeError": "فشل في إكمال الجلسة",
         "evaluationSubmitted": "تم إرسال التقييم بنجاح!",
