admin can delete session

--- a/frontend/src/locales/ar.json
+++ b/frontend/src/locales/ar.json
@@ -384,6 +384,12 @@
         "clearFilters": "مسح الفلاتر",
         "showingResults": "عرض {{count}} مستخدم",
         "noUsersFound": "لم يتم العثور على مستخدمين يطابقون الفلاتر",
+        "sessions": "الجلسات",
+        "sessionsDescription": "عرض وإدارة جميع جلسات المقابلات",
+        "searchSessions": "البحث باسم المرشح أو المحاور...",
+        "deleteSessionSuccess": "تم حذف الجلسة بنجاح",
+        "deleteSessionConfirmTitle": "حذف الجلسة",
+        "deleteSessionConfirm": "هل أنت متأكد من حذف هذه الجلسة؟ لا يمكن التراجع عن هذا الإجراء.",
         "reservationsSlots": "الحجوزات والفترات الزمنية",
         "completedReservations": "جميع الحجوزات",
         "completedReservationsDescription": "عرض وإدارة جميع الحجوزات",
