--- a/frontend/src/locales/en.json
+++ b/frontend/src/locales/en.json
@@ -379,6 +379,12 @@
         "clearFilters": "Clear Filters",
         "showingResults": "Showing {{count}} users",
         "noUsersFound": "No users found matching your filters",
+        "sessions": "Sessions",
+        "sessionsDescription": "View and manage all interview sessions",
+        "searchSessions": "Search by candidate or interviewer name...",
+        "deleteSessionSuccess": "Session deleted successfully",
+        "deleteSessionConfirmTitle": "Delete Session",
+        "deleteSessionConfirm": "Are you sure you want to delete this session? This action cannot be undone.",
         "reservationsSlots": "Reservations & Slots",
         "completedReservations": "All Reservations",
         "completedReservationsDescription": "View and manage all reservations",
