making notfound page 404

--- a/frontend/src/locales/ar.json
+++ b/frontend/src/locales/ar.json
@@ -248,7 +248,8 @@
         "active": "نشط",
         "inactive": "غير نشط",
         "past": "سابق",
-        "retry": "إعادة المحاولة"
+        "retry": "إعادة المحاولة",
+        "backToHome": "العودة إلى الرئيسية"
     },
     "status": {
         "pending": "في الانتظار",
@@ -266,7 +267,9 @@
         "serverError": "خطأ في الخادم. يرجى المحاولة لاحقاً.",
         "unauthorized": "وصول غير مصرح به.",
         "forbidden": "الوصول محظور.",
-        "notFound": "المورد غير موجود.",
+        "notFound": "الصفحة غير موجودة",
+        "pageNotFound": "الصفحة التي تبحث عنها غير موجودة.",
+        "pageNotFoundDescription": "الصفحة التي تبحث عنها ربما تم نقلها أو حذفها أو لا وجود لها. يرجى التحقق من الرابط أو العودة إلى الصفحة الرئيسية.",
         "validationError": "يرجى التحقق من المدخلات.",
         "genericError": "حدث خطأ ما. يرجى المحاولة مرة أخرى."
     },
